--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="me" href="https://www.blogger.com/profile/05026926775547269948" />
-<meta name='google-adsense-platform-account' content='ca-host-pub-1556223355139109'/>
-<meta name='google-adsense-platform-domain' content='blogspot.com'/>
-</head><body>
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>πλήρης κατάλογος</title>
-<meta content='https://i.postimg.cc/Bnq5MpvX/Screenshot-756.png' property='og:image'/>
+<meta content='https://shrlc.com/KFT2XDn' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -69,4 +66,4 @@
         w.backOfferUrl = ''    }
                         (window));
       /*]]>*/ 
-</body></html>
+</body>
